# parlez

./: .gitignore  justfile  pyproject.toml
.github/workflows/: ci.yml
app/: config.py  main.py
backend/alembic/: env.py
backend/app/db/: __init__.py
backend/app/models/: __init__.py
backend/tests/: playwright.config.ts
frontend/: tailwind.config.js
frontend/src/: App.tsx
frontend/src/components/: Layout.tsx
frontend/src/pages/: Dashboard.tsx  Sentences.tsx  Translate.tsx
