[project]
name = "parlez"
version = "0.1.0"
description = "A translation practice app"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "alembic>=1.16.5",
    "authlib>=1.6.6",
    "black>=25.11.0",
    "boto3>=1.42.34",
    "fastapi>=0.128.0",
    "httpx>=0.28.1",
    "playwright>=1.57.0",
    "psycopg2-binary>=2.9.11",
    "pytest>=8.4.2",
    "pytest-asyncio>=1.2.0",
    "pytest-playwright>=0.7.1",
    "python-jose[cryptography]>=3.5.0",
    "python-multipart>=0.0.20",
    "ruff>=0.14.14",
    "sqlalchemy>=2.0.46",
    "uvicorn[standard]>=0.39.0",
]
